--- a/assets/style.css
+++ b/assets/style.css
@@ -2,9 +2,125 @@
 main {
     height: 100vh;
     width: 100%;
-    background-color: #5c72bb;
+    background-color: #505f91;
+    color: white;
+    text-align: center;
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    border: 10px solid gray; /* width, style, colour */
+}
+
+/* Add a black background color to the top navigation */
+.topnav {
+    background-color: #505f91;
+    overflow: hidden;
+  }
+  
+  /* Style the links inside the navigation bar */
+  .topnav a {
+    float: center;
+    color: #f2f2f2;
+    padding: 10px 15px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  /* Change the color of links on hover */
+  .topnav a:hover {
+    background-color: rgb(69, 198, 207);
+    color: black;
+  }
+  
+  /* Add a color to the active/current link */
+  .topnav a.active {
+    background-color: #d6abcf;
+    color: rgb(3, 3, 3);
+  }
+
+.header h1 {
+    font-size: 50px;
+    
+}
+
+.about {
+    font-size: 25px;
+    display: block;
+    margin: 20px auto;
+    max-width: 500px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 
 }
-.header {
-    color:lightgrey
+
+.title {
+    font-size: 15px;
+    margin: 10px auto;
+    max-width: 10px;
+    text-align: center;
+    padding-bottom: 30px;
+
 }
+
+#project {
+    margin: 10px auto;
+    max-width: 30px;
+    background-color: rgb(209, 152, 190);
+    color: rgb(72, 73, 75);
+    text-align: center;
+
+}
+
+.photo {
+    Padding: 50px,50px,50px,50px; 
+    max-width: 10px;
+    margin: 200px;
+
+
+}
+
+article {
+    background: linear-gradient(
+      to right, 
+      hsl(98 100% 62%), 
+      hsl(204 100% 59%)
+    );
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    text-align: center;
+  }
+  
+  h1 {
+    font-size: 10vmin;
+    line-height: 1.1;
+  }
+  
+  body {
+    background: rgb(21, 132, 212);
+    
+    min-block-size: 100%;
+    min-inline-size: 100%;
+    box-sizing: border-box;
+    display: grid;
+    place-content: center;
+    font-family: system-ui;
+    font-size: min(200%, 5vmin);
+  }
+  
+  h1, p, body {
+    margin: 0;
+  }
+  
+  p {
+    font-family: "Dank Mono", ui-monospace, monospace;
+  }
+  
+  html {
+    block-size: 100%;
+    inline-size: 100%;
+  }
+
+
+
+
+ 
+
+
+
