--- a/assets/style.css
+++ b/assets/style.css
@@ -36,9 +36,25 @@ main {
     color: rgb(3, 3, 3);
   }
 
-.header h1 {
+.header {
     font-size: 50px;
+    padding: 40px;
     
+}
+
+.jumbo {
+  height:300px;
+  background-size: cover;
+  margin-top: 30px;
+  background-position: center center;
+  background-image: url("https://images.unsplash.com/photo-1496096265110-f83ad7f96608?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80")
+
+}
+
+.cool-title {
+  position: absolute;
+  bottom: 10px;
+  right: 50px;
 }
 
 .about {
@@ -50,7 +66,7 @@ main {
 
 }
 
-.title {
+.portoflio-title {
     font-size: 15px;
     margin: 10px auto;
     max-width: 10px;
@@ -72,7 +88,8 @@ main {
     Padding: 50px,50px,50px,50px; 
     max-width: 10px;
     margin: 200px;
-
+    align-items: center;
+    justify-content: space-evenly;
 
 }
 
@@ -117,6 +134,23 @@ article {
     inline-size: 100%;
   }
 
+  .card {
+    /* Add shadows to create the "card" effect */
+    opacity: 80%;
+    background-color: white;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+  }
+  
+  /* On mouse-over, add a deeper shadow */
+  .card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  }
+  
+  /* Add some padding inside the card container */
+  .container {
+    padding: 2px 16px;
+  }
 
 
 
