--- a/assets/style.css
+++ b/assets/style.css
@@ -1,160 +1,69 @@
-
-main {
-    height: 100vh;
-    width: 100%;
-    background-color: #505f91;
-    color: white;
-    text-align: center;
-    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    border: 10px solid gray; /* width, style, colour */
+/* hero background image */
+.bgimage {
+  height:100vh;
+  background: url('images/heroImage.jpeg');
+  background-size:cover;
+  position:relative;
 }
-
-/* Add a black background color to the top navigation */
-.topnav {
-    background-color: #505f91;
-    overflow: hidden;
-  }
-  
-  /* Style the links inside the navigation bar */
-  .topnav a {
-    float: center;
-    color: #f2f2f2;
-    padding: 10px 15px;
-    text-decoration: none;
-    font-size: 17px;
-  }
-  
-  /* Change the color of links on hover */
-  .topnav a:hover {
-    background-color: rgb(69, 198, 207);
-    color: black;
-  }
-  
-  /* Add a color to the active/current link */
-  .topnav a.active {
-    background-color: #d6abcf;
-    color: rgb(3, 3, 3);
-  }
-
-.header {
-    font-size: 50px;
-    padding: 40px;
-    
+/* text css above hero image*/
+.hero_title {
+  font-size: 4.5rem;
 }
-
-.jumbo {
-  height:300px;
-  background-size: cover;
-  margin-top: 30px;
-  background-position: center center;
-  background-image: url("https://images.unsplash.com/photo-1496096265110-f83ad7f96608?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80")
-
+.hero_desc {
+  font-size: 2rem;
 }
-
-.cool-title {
+.hero-text {
+  text-align: center;
   position: absolute;
-  bottom: 10px;
-  right: 50px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
 }
 
-.about {
-    font-size: 25px;
-    display: block;
-    margin: 20px auto;
-    max-width: 500px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-
+ /* about section image css */
+.imageAboutPage {
+  width: 100%;
 }
 
-.portoflio-title {
-    font-size: 15px;
-    margin: 10px auto;
-    max-width: 10px;
-    text-align: center;
-    padding-bottom: 30px;
-
+/* services section css */
+.servicesText.card {
+  height: 280px;
+  cursor: pointer;
+}
+.servicesIcon {
+  font-size: 36px;
+  text-align: center;
+  width: 100%;
+}
+.card-title {
+  text-align: center;
+}
+.card:hover .servicesIcon {
+  color: #008000;
+}
+.servicesText:hover {
+  border: 1px solid #008000;
 }
 
-#project {
-    margin: 10px auto;
-    max-width: 30px;
-    background-color: rgb(209, 152, 190);
-    color: rgb(72, 73, 75);
-    text-align: center;
-
+/* display background color black on navbar scroll */
+.navbarScroll.navbarDark {
+  background-color: black;
 }
-
-.photo {
-    Padding: 50px,50px,50px,50px; 
-    max-width: 10px;
-    margin: 200px;
-    align-items: center;
-    justify-content: space-evenly;
-
+/* social media icons styling */
+.social-icons {
+  font-size: 36px;
+  cursor: pointer;
 }
-
-article {
-    background: linear-gradient(
-      to right, 
-      hsl(98 100% 62%), 
-      hsl(204 100% 59%)
-    );
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    text-align: center;
-  }
-  
-  h1 {
-    font-size: 10vmin;
-    line-height: 1.1;
-  }
-  
-  body {
-    background: rgb(21, 132, 212);
-    
-    min-block-size: 100%;
-    min-inline-size: 100%;
-    box-sizing: border-box;
-    display: grid;
-    place-content: center;
-    font-family: system-ui;
-    font-size: min(200%, 5vmin);
-  }
-  
-  h1, p, body {
-    margin: 0;
-  }
-  
-  p {
-    font-family: "Dank Mono", ui-monospace, monospace;
-  }
-  
-  html {
-    block-size: 100%;
-    inline-size: 100%;
-  }
-
-  .card {
-    /* Add shadows to create the "card" effect */
-    opacity: 80%;
-    background-color: white;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-  }
-  
-  /* On mouse-over, add a deeper shadow */
-  .card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-  }
-  
-  /* Add some padding inside the card container */
-  .container {
-    padding: 2px 16px;
-  }
-
-
-
- 
-
-
+.fa-facebook:hover,.fa-instagram:hover,.fa-twitter:hover,.fa-linkedin:hover, .fa-twitch:hover {
+  color: #008000;
+}
+.fab {
+  color: #000000;
+}
+/* footer styling */
+#footer {
+  background-color: #808080;
+  text-align: center;
+}
 
